--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,7 @@
    <!-- Управление доступом поисковых роботов к странице -->
    <meta name="robots" content="">
 </head>
+
 <body>
     <div class="wrapper">
 <header class="header">
@@ -49,55 +50,89 @@
                         <div class="blog__article-name">Mimo learning</div>
                         <div class="blog__info">
                             <div class="blog__date">20 Apr 2022</div>
-                            <span class="blog__separator">|</span> 
-                            <div class="blog__category">Mimo, mobile app</div> 
+                            <span class="blog__separator">|</span>
+                            <div class="blog__category">Mimo, mobile app</div>
                         </div>
-                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                            nostrud amet.</div>
                     </div>
                     <div class="blog__item">
                         <div class="blog__article-name">HTML, Mimo, CSS, SCSS</div>
                         <div class="blog__info">
                             <div class="blog__date">10 May 2022</div>
-                            <span class="blog__separator">|</span> 
-                            <div class="blog__category">HTML, devTools</div> 
+                            <span class="blog__separator">|</span>
+                            <div class="blog__category">HTML, devTools</div>
                         </div>
-                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                            nostrud amet.</div>
                     </div>
                     <div class="blog__item">
                         <div class="blog__article-name">CSS, HTML, Mimo, LearnJs, SCSS</div>
                         <div class="blog__info">
-                            <div class="blog__date">1 Jun 2022</div>
-                            <span class="blog__separator">|</span> 
-                            <div class="blog__category">html&css, responsive, adaptive</div> 
+                            <div class="blog__date">01 Jun 2022</div>
+                            <span class="blog__separator">|</span>
+                            <div class="blog__category">html&css, responsive, adaptive</div>
                         </div>
-                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                            nostrud amet.</div>
                     </div>
                     <div class="blog__item">
                         <div class="blog__article-name">JS, LearnJs, CodeWars, GULP, Prepross</div>
                         <div class="blog__info">
                             <div class="blog__date">03 Jul 2022</div>
-                            <span class="blog__separator">|</span> 
-                            <div class="blog__category">Js Basics, 8/7kyu</div> 
+                            <span class="blog__separator">|</span>
+                            <div class="blog__category">Js Basics, 8/7kyu</div>
                         </div>
-                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                            nostrud amet.</div>
                     </div>
                     <div class="blog__item">
                         <div class="blog__article-name">JS, LearnJs, GitHub, CodeWars</div>
                         <div class="blog__info">
                             <div class="blog__date">18 Aug 2022</div>
-                            <span class="blog__separator">|</span> 
-                            <div class="blog__category">ES6+, 6kyu</div> 
+                            <span class="blog__separator">|</span>
+                            <div class="blog__category">ES6+, 6kyu</div>
                         </div>
-                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                            nostrud amet.</div>
                     </div>
                     <div class="blog__item">
                         <div class="blog__article-name">JS, API request, micro App</div>
                         <div class="blog__info">
-                            <div class="blog__date">20 Sep 2022</div>
-                            <span class="blog__separator">|</span> 
-                            <div class="blog__category">FetchApi, Async, Event, 5kyu</div> 
+                            <div class="blog__date">10 Sep 2022</div>
+                            <span class="blog__separator">|</span>
+                            <div class="blog__category">FetchApi, Async, Event, 5kyu</div>
                         </div>
-                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                            nostrud amet.</div>
+                    </div>
+                    <div class="blog__item">
+                        <div class="blog__article-name">JS Apps (pet-projects)</div>
+                        <div class="blog__info">
+                            <div class="blog__date">26 Sep 2022</div>
+                            <span class="blog__separator">|</span>
+                            <div class="blog__category">Calculator, StopWatch, Pomodoro Clock, 5kyu</div>
+                        </div>
+                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                    </div>
+                    <div class="blog__item">
+                        <div class="blog__article-name">React App</div>
+                        <div class="blog__info">
+                            <div class="blog__date">1 Oct 2022</div>
+                            <span class="blog__separator">|</span>
+                            <div class="blog__category">WebStorm, JSX, Props, Router, NavLink</div>
+                        </div>
+                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
                     </div>
                 </div>
             </div>
@@ -114,4 +149,5 @@
    </div>
 </footer>    </div>
 <script src="js/script.js"></script></body>
+
 </html>
