--- a/works.html
+++ b/works.html
@@ -19,6 +19,7 @@
    <!-- Управление доступом поисковых роботов к странице -->
    <meta name="robots" content="">
 </head>
+
 <body>
     <div class="wrapper">
 <header class="header">
@@ -43,61 +44,123 @@
    </div>
 </header>        <main class="page">
             <div class="works page__container _container">
-               <h1 class="works__main-title title">Works</h1>
-               <div class="works__items">
-                  <article class="works__item">
-                      <a href="articleGameSite.html" class="works__image _ibg">
-                          <img src="img/works/01.jpg" alt="Work #1">
-                      </a>
-                      <div class="works__body">
-                          <div class="works__title"><a href="articleGameSite.html">Game Site</a></div>
-                          <div class="works__info">
-                              <div class="works__year">2022</div>
-                              <div class="works__category">Creating</div>
-                          </div>
-                          <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-                      </div>
-                  </article>
-                  <article class="works__item">
-                      <a href="articlePassGenerate.html" class="works__image _ibg">
-                          <img src="img/works/02.jpg" alt="Work #2">
-                      </a>
-                      <div class="works__body">
-                          <div class="works__title"><a href="articlePassGenerate.html">Random Password Generate</a></div>
-                          <div class="works__info">
-                              <div class="works__year">2022</div>
-                              <div class="works__category">Algorithm</div>
-                          </div>
-                          <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-                      </div>
-                  </article>
-                  <article class="works__item">
-                      <a href="articleRocketLeague.html" class="works__image _ibg">
-                          <img src="img/works/03.jpg" alt="Work #3">
-                      </a>
-                      <div class="works__body">
-                          <div class="works__title"><a href="articleRocketLeague.html">Rocket League Statistic</a></div>
-                          <div class="works__info">
-                              <div class="works__year">2022</div>
-                              <div class="works__category">Flexbox</div>
-                          </div>
-                          <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-                      </div>
-                  </article>
-                  <article class="works__item">
-                     <a href="articleFood.html" class="works__image _ibg">
-                         <img src="img/works/04.jpg" alt="Work #4">
-                     </a>
-                     <div class="works__body">
-                         <div class="works__title"><a href="articleFood.html">Food Site</a></div>
-                         <div class="works__info">
-                             <div class="works__year">2022</div>
-                             <div class="works__category">Creating, Big Images</div>
-                         </div>
-                         <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-                     </div>
-                 </article>
-              </div>
+                <h1 class="works__main-title title">Works</h1>
+                <div class="works__items">
+                    <article class="works__item">
+                        <a href="https://papil10n.github.io/Pomodoro_Clock/" class="works__image _ibg">
+                            <img src="img/works/05.jpg" alt="Work #1">
+                        </a>
+                        <div class="works__body">
+                            <div class="works__title"><a href="https://papil10n.github.io/Pomodoro_Clock/">Pomodoro
+                                    Clock</a></div>
+                            <div class="works__info">
+                                <div class="works__year">2022</div>
+                                <div class="works__category">JS App</div>
+                            </div>
+                            <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                                amet sint. Velit
+                                officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                amet.</div>
+                        </div>
+                    </article>
+                    <article class="works__item">
+                        <a href="https://papil10n.github.io/Calculator/" class="works__image _ibg">
+                            <img src="img/works/06.jpg" alt="Work #1">
+                        </a>
+                        <div class="works__body">
+                            <div class="works__title"><a href="https://papil10n.github.io/Calculator/">Calculator</a>
+                            </div>
+                            <div class="works__info">
+                                <div class="works__year">2022</div>
+                                <div class="works__category">JS App</div>
+                            </div>
+                            <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                                amet sint. Velit
+                                officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                amet.</div>
+                        </div>
+                    </article>
+                    <article class="works__item">
+                        <a href="https://papil10n.github.io/StopWatch/" class="works__image _ibg">
+                            <img src="img/works/07.jpg" alt="Work #1">
+                        </a>
+                        <div class="works__body">
+                            <div class="works__title"><a href="https://papil10n.github.io/StopWatch/">Stop Watch</a>
+                            </div>
+                            <div class="works__info">
+                                <div class="works__year">2022</div>
+                                <div class="works__category">JS App</div>
+                            </div>
+                            <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                                amet sint. Velit
+                                officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                amet.</div>
+                        </div>
+                    </article>
+                    <article class="works__item">
+                        <a href="articleGameSite.html" class="works__image _ibg">
+                            <img src="img/works/01.jpg" alt="Work #1">
+                        </a>
+                        <div class="works__body">
+                            <div class="works__title"><a href="articleGameSite.html">Game Site</a></div>
+                            <div class="works__info">
+                                <div class="works__year">2022</div>
+                                <div class="works__category">Creating</div>
+                            </div>
+                            <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                                amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat
+                                sunt nostrud amet.</div>
+                        </div>
+                    </article>
+                    <article class="works__item">
+                        <a href="articlePassGenerate.html" class="works__image _ibg">
+                            <img src="img/works/02.jpg" alt="Work #2">
+                        </a>
+                        <div class="works__body">
+                            <div class="works__title"><a href="articlePassGenerate.html">Random Password Generate</a>
+                            </div>
+                            <div class="works__info">
+                                <div class="works__year">2022</div>
+                                <div class="works__category">Algorithm</div>
+                            </div>
+                            <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                                amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat
+                                sunt nostrud amet.</div>
+                        </div>
+                    </article>
+                    <article class="works__item">
+                        <a href="articleRocketLeague.html" class="works__image _ibg">
+                            <img src="img/works/03.jpg" alt="Work #3">
+                        </a>
+                        <div class="works__body">
+                            <div class="works__title"><a href="articleRocketLeague.html">Rocket League Statistic</a>
+                            </div>
+                            <div class="works__info">
+                                <div class="works__year">2022</div>
+                                <div class="works__category">Flexbox</div>
+                            </div>
+                            <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                                amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat
+                                sunt nostrud amet.</div>
+                        </div>
+                    </article>
+                    <article class="works__item">
+                        <a href="articleFood.html" class="works__image _ibg">
+                            <img src="img/works/04.jpg" alt="Work #4">
+                        </a>
+                        <div class="works__body">
+                            <div class="works__title"><a href="articleFood.html">Food Site</a></div>
+                            <div class="works__info">
+                                <div class="works__year">2022</div>
+                                <div class="works__category">Creating, Big Images</div>
+                            </div>
+                            <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                                amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat
+                                sunt nostrud amet.</div>
+                        </div>
+                    </article>
+
+                </div>
             </div>
         </main>
 <footer class="footer">
@@ -112,4 +175,5 @@
    </div>
 </footer>    </div>
 <script src="js/script.js"></script></body>
+
 </html>
