--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
                     <div class="blog__item">
                         <div class="blog__article-name">Mimo learning</div>
                         <div class="blog__info">
-                            <div class="blog__date">20 Apr 2022</div>
+                            <div class="blog__date">29 Mar 2022</div>
                             <span class="blog__separator">|</span>
                             <div class="blog__category">Mimo, mobile app</div>
                         </div>
@@ -58,77 +58,93 @@
                             nostrud amet.</div>
                     </div>
                     <div class="blog__item">
-                        <div class="blog__article-name">HTML, Mimo, CSS, SCSS</div>
+                        <div class="blog__article-name">Basic HTML, CSS</div>
                         <div class="blog__info">
-                            <div class="blog__date">10 May 2022</div>
+                            <div class="blog__date">27 Apr 2022</div>
                             <span class="blog__separator">|</span>
-                            <div class="blog__category">HTML, devTools</div>
+                            <div class="blog__category">HTML, Mimo, CSS, SCSS</div>
                         </div>
                         <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
                             sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
                             nostrud amet.</div>
                     </div>
                     <div class="blog__item">
-                        <div class="blog__article-name">CSS, HTML, Mimo, LearnJs, SCSS</div>
+                        <div class="blog__article-name">Responsive/Adaptive site</div>
                         <div class="blog__info">
-                            <div class="blog__date">01 Jun 2022</div>
+                            <div class="blog__date">11 May 2022</div>
                             <span class="blog__separator">|</span>
-                            <div class="blog__category">html&css, responsive, adaptive</div>
+                            <div class="blog__category">CSS, HTML, Mimo, LearnJs, SCSS, html/css</div>
                         </div>
                         <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
                             sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
                             nostrud amet.</div>
                     </div>
                     <div class="blog__item">
-                        <div class="blog__article-name">JS, LearnJs, CodeWars, GULP, Prepross</div>
+                        <div class="blog__article-name">Basic JavaScript</div>
                         <div class="blog__info">
-                            <div class="blog__date">03 Jul 2022</div>
+                            <div class="blog__date">02 Jun 2022</div>
                             <span class="blog__separator">|</span>
-                            <div class="blog__category">Js Basics, 8/7kyu</div>
+                            <div class="blog__category">Data structures, Functions, Scope/Closure, LearnJs, CodeWars
+                                8/7kyu, GULP,
+                                Prepross</div>
                         </div>
                         <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
                             sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
                             nostrud amet.</div>
                     </div>
                     <div class="blog__item">
-                        <div class="blog__article-name">JS, LearnJs, GitHub, CodeWars</div>
+                        <div class="blog__article-name">JavaScript+, ES6+</div>
                         <div class="blog__info">
-                            <div class="blog__date">18 Aug 2022</div>
+                            <div class="blog__date">27 Jun 2022</div>
                             <span class="blog__separator">|</span>
-                            <div class="blog__category">ES6+, 6kyu</div>
+                            <div class="blog__category">Event Loop, Promises, Destruncturisation, DOM, LearnJs, GitHub,
+                                CodeWars 6 kyu</div>
                         </div>
                         <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
                             sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
                             nostrud amet.</div>
                     </div>
                     <div class="blog__item">
-                        <div class="blog__article-name">JS, API request, micro App</div>
+                        <div class="blog__article-name">JavaScript++</div>
                         <div class="blog__info">
-                            <div class="blog__date">10 Sep 2022</div>
+                            <div class="blog__date">2 Aug 2022</div>
                             <span class="blog__separator">|</span>
-                            <div class="blog__category">FetchApi, Async, Event, 5kyu</div>
+                            <div class="blog__category"> API requests, storage, cookies, algorithms, CodeWars 5kyu</div>
                         </div>
                         <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
                             sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
                             nostrud amet.</div>
                     </div>
                     <div class="blog__item">
-                        <div class="blog__article-name">JS Apps (pet-projects)</div>
+                        <div class="blog__article-name">JavaScript (pet-projects)</div>
                         <div class="blog__info">
-                            <div class="blog__date">26 Sep 2022</div>
+                            <div class="blog__date">14 Aug 2022</div>
                             <span class="blog__separator">|</span>
-                            <div class="blog__category">Calculator, StopWatch, Pomodoro Clock, 5kyu</div>
+                            <div class="blog__category">Calculator, StopWatch, Pomodoro Clock, CodeWars 5kyu</div>
                         </div>
                         <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
                             sint. Velit officia
                             consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
                     </div>
                     <div class="blog__item">
-                        <div class="blog__article-name">React App</div>
+                        <div class="blog__article-name">Learn React</div>
+                        <div class="blog__info">
+                            <div class="blog__date">15 Sep 2022</div>
+                            <span class="blog__separator">|</span>
+                            <div class="blog__category">WebStorm, JSX, Props, Router, NavLink</div>
+                        </div>
+                        <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                    </div>
+                    <div class="blog__item">
+                        <div class="blog__article-name">Redux</div>
                         <div class="blog__info">
                             <div class="blog__date">1 Oct 2022</div>
                             <span class="blog__separator">|</span>
-                            <div class="blog__category">WebStorm, JSX, Props, Router, NavLink</div>
+                            <div class="blog__category">State management, createStore(), Observer(pattern), dispatch,
+                                context
+                                API, combineReducers()</div>
                         </div>
                         <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
                             sint. Velit officia
