--- a/index.html
+++ b/index.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="format-detection" content="telephone=no">
-   <link rel="shortcut icon" href="img/ico.ico" type="image/x-icon">
-   <link rel="stylesheet" href="css/style.css">
-   <title>HomePage</title>
-       <!-- Настройки адаптивности страницы  -->
-   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-       <!-- Отключает принудительную ссылку у номера телефона на iOS -->
-   <meta name="format-detection" content="telephone=no">
 
-       <!-- SEO -->
-   <!-- Краткое описание страницы  -->
-   <meta name="description" content="">
-   <!-- Ключевые слова страницы  -->
-   <meta name="keywords" content=""> 
-   <!-- Управление доступом поисковых роботов к странице -->
-   <meta name="robots" content="">
+<head>
+    <meta charset="UTF-8">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="shortcut icon" href="img/ico.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <title>HomePage</title>
+    <!-- Настройки адаптивности страницы  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Отключает принудительную ссылку у номера телефона на iOS -->
+    <meta name="format-detection" content="telephone=no">
+
+    <!-- SEO -->
+    <!-- Краткое описание страницы  -->
+    <meta name="description" content="">
+    <!-- Ключевые слова страницы  -->
+    <meta name="keywords" content="">
+    <!-- Управление доступом поисковых роботов к странице -->
+    <meta name="robots" content="">
 </head>
 
 <body>
     <div class="wrapper">
-<header class="header">
-   <div class="header__content">
+        <header class="header">
+            <div class="header__content">
 
-      <div class="header__menu menu">
-         <div class="menu__icon icon-menu">
-            <span></span>
-            <span></span>
-            <span></span>
-         </div>
-         <nav class="menu__body">
-            <ul class="menu__list">
-               <li><a href="index.html" class="menu__link">Home</a></li>
-               <li><a href="works.html" class="menu__link">Works</a></li>
-               <li><a href="blog.html" class="menu__link">Blog</a></li>
-               <li><a href="contacts.html" class="menu__link">Contact</a></li>
-            </ul>
-         </nav>
-      </div>
+                <div class="header__menu menu">
+                    <div class="menu__icon icon-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <nav class="menu__body">
+                        <ul class="menu__list">
+                            <li><a href="index.html" class="menu__link">Home</a></li>
+                            <li><a href="works.html" class="menu__link">Works</a></li>
+                            <li><a href="blog.html" class="menu__link">Blog</a></li>
+                            <li><a href="contacts.html" class="menu__link">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
 
-   </div>
-</header>        <main class="page">
+            </div>
+        </header>
+        <main class="page">
             <!-- hello -->
             <section class="hello">
                 <div class="hello__container _container">
@@ -69,19 +71,19 @@
                     <div class="recent-posts__items">
                         <div class="recent-posts__column">
                             <article class="recent-posts__item recent-post">
-                                <a href="blog.html" class="recent-post__title">JS Apps (pet-projects)</a>
-                                <div class="recent-post__info">26 Sep 2022 <span>|</span> Calculator, StopWatch,
-                                    Pomodoro
-                                    Clock, 5kyu</div>
-                                <div class="recent-post__text text">Amet minim mollit non deserunt ullamco est sit
-                                    aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-                                    Exercitation veniam consequat sunt nostrud amet.</div>
+                                <a href="blog.html" class="recent-post__title">Redux</a>
+                                <div class="recent-post__info">1 Oct 2022 <span>|</span>State management, createStore(),
+                                    Observer(pattern), dispatch,
+                                    context
+                                    API, combineReducers()</div>
+                                <div class="recent-post__text text">
+                                    Exercitation veniam consequat sunt nostrud amet. Consequat sunt nostrud amet.</div>
                             </article>
                         </div>
                         <div class="recent-posts__column">
                             <article class="recent-posts__item recent-post">
-                                <a href="blog.html" class="recent-post__title">React App</a>
-                                <div class="recent-post__info">1 Oct 2022 <span>|</span> WebStorm, JSX, Props, Router,
+                                <a href="blog.html" class="recent-post__title">Learn React</a>
+                                <div class="recent-post__info">15 Sep 2022 <span>|</span> WebStorm, JSX, Props, Router,
                                     NavLink
                                 </div>
                                 <div class="recent-post__text text">Amet minim mollit non deserunt ullamco est sit
@@ -156,17 +158,20 @@
                 </div>
             </section>
         </main>
-<footer class="footer">
-   <div class="footer__content _container">
-      <div class="footer__social social">
-         <a href="" class="social__item"><img src="img/ico svg/fb.svg" alt="#"></a>
-         <a href="https://www.instagram.com/papil10n_/" target="_blank" class="social__item"><img src="img/ico svg/insta.svg" alt="#"></a>
-         <a href="" class="social__item"><img src="img/ico svg/Linkedin.svg" alt="#"></a>
-         <a href="" class="social__item"><img src="img/ico svg/twit.svg" alt="#"></a>
-      </div>
-      <div class="footer__copy">Copyright ©2020 All rights reserved </div>
-   </div>
-</footer>    </div>
-<script src="js/script.js"></script></body>
+        <footer class="footer">
+            <div class="footer__content _container">
+                <div class="footer__social social">
+                    <a href="" class="social__item"><img src="img/ico svg/fb.svg" alt="#"></a>
+                    <a href="https://www.instagram.com/papil10n_/" target="_blank" class="social__item"><img
+                            src="img/ico svg/insta.svg" alt="#"></a>
+                    <a href="" class="social__item"><img src="img/ico svg/Linkedin.svg" alt="#"></a>
+                    <a href="" class="social__item"><img src="img/ico svg/twit.svg" alt="#"></a>
+                </div>
+                <div class="footer__copy">Copyright ©2020 All rights reserved </div>
+            </div>
+        </footer>
+    </div>
+    <script src="js/script.js"></script>
+</body>
 
 </html>
